Tests for the new Environment Arbiterm using system-rules

--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -328,6 +328,13 @@
       <artifactId>xz</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Used for testing environment variables arbiter -->
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
