Fix environment arbiter tests with system-lambda

--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -331,8 +331,8 @@
     <!-- Used for testing environment variables arbiter -->
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
-      <artifactId>system-rules</artifactId>
-      <version>1.19.0</version>
+      <artifactId>system-lambda</artifactId>
+      <version>1.2.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
