Add new tojul module to root POM

--- a/pom.xml
+++ b/pom.xml
@@ -1554,6 +1554,7 @@
     <module>log4j-slf4j-impl</module>
     <module>log4j-slf4j18-impl</module>
     <module>log4j-to-slf4j</module>
+    <module>log4j-to-jul</module>
     <module>log4j-jcl</module>
     <module>log4j-flume-ng</module>
     <module>log4j-taglib</module>
