--- a/pom.xml
+++ b/pom.xml
@@ -1016,6 +1016,13 @@
         <version>0.8.1</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <!-- https://javadoc.io/doc/com.google.guava/guava-testlib/latest/com/google/common/testing/TestLogHandler.html used in log4j-to-jul tests -->
+        <artifactId>guava-testlib</artifactId>
+        <version>31.0.1-jre</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -1714,6 +1721,7 @@
     <module>log4j-slf4j-impl</module>
     <module>log4j-slf4j18-impl</module>
     <module>log4j-to-slf4j</module>
+    <module>log4j-to-jul</module>
     <module>log4j-jcl</module>
     <module>log4j-jndi</module>
     <module>log4j-jndi-test</module>
