Refactor 1.2 bridge internals to use a single private log manager and adapter.
- Implement LogManager.getCurrentLoggers().
- The class loader found in the bridge and passed down instead of a
FQCN.
- Adds a package private extension to LoggerRepository called
LoggerRepository2 to allow class loader propagation.
- Core availability is computed once in LogManager.
- Move Log4j to the top of POM dependencies
- Split commit 1/2 for cherry-picking to master.

--- a/log4j-1.2-api/pom.xml
+++ b/log4j-1.2-api/pom.xml
@@ -35,6 +35,17 @@
     <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
+    <!-- Log4j Runtime -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <!-- JUnit -->
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
@@ -62,17 +73,8 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <optional>true</optional>
     </dependency>
     <!-- Used for JMS appenders (needs an implementation of course) -->
     <dependency>
