Clean up and bullet-proof H2 and HSQLDB tests.

--- a/log4j-jdbc/pom.xml
+++ b/log4j-jdbc/pom.xml
@@ -100,6 +100,11 @@
       <artifactId>commons-logging</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
