--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -213,6 +213,19 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.20.0</version>
+        <configuration>
+          <java>
+            <palantirJavaFormat />
+<!--            <licenseHeader>-->
+<!--              <file>${project.basedir}/checkstyle-header.txt</file>-->
+<!--            </licenseHeader>-->
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
