--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -229,6 +229,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.20.0</version>
+        <configuration>
+          <java>
+            <palantirJavaFormat />
+<!--            <licenseHeader>-->
+<!--              <file>${project.basedir}/checkstyle-header.txt</file>-->
+<!--            </licenseHeader>-->
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
