--- a/pom.xml
+++ b/pom.xml
@@ -1170,6 +1170,19 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.20.0</version>
+        <configuration>
+          <java>
+            <palantirJavaFormat />
+<!--            <licenseHeader>-->
+<!--              <file>${project.basedir}/checkstyle-header.txt</file>-->
+<!--            </licenseHeader>-->
+          </java>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
