--- a/.asf.yaml
+++ b/.asf.yaml
@@ -22,7 +22,7 @@ notifications:
   pullrequests: notifications@logging.apache.org
   jira_options: link label
 github:
-#  description: "Apache Log4j 2 is an upgrade to Log4j that provides significant improvements over its predecessor, Log4j 1.x, and provides many of the improvements available in Logback while fixing some inherent problems in Logback's architecture."
+  description: "Apache Log4j 2 is an upgrade to Log4j that provides significant improvements over its predecessor, Log4j 1.x, and provides many of the improvements available in Logback while fixing some inherent problems in Logback's architecture."
   homepage: https://logging.apache.org/log4j/2.x/
   labels:
     - apache
