Add inceptionYear 2022 in to-jul POM

--- a/log4j-to-jul/pom.xml
+++ b/log4j-to-jul/pom.xml
@@ -27,6 +27,7 @@
   <packaging>jar</packaging>
   <name>Apache Log4j to JUL Bridge</name>
   <description>The Apache Log4j binding between Log4j 2 API and java.util.logging (JUL).</description>
+  <inceptionYear>2022</inceptionYear>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Log4j to JUL Documentation</docLabel>
