Make the test use a system property in addition to a local property.

--- a/log4j-1.2-api/src/test/resources/log4j1-rolling-properties.properties
+++ b/log4j-1.2-api/src/test/resources/log4j1-rolling-properties.properties
@@ -16,7 +16,7 @@
 log4j.debug=true
 
 # Properties for substitution
-somelogfile=target/rolling/somefile.log
+somelogfile=somefile.log
 maxfilesize=256MB
 maxbackupindex=20
 
@@ -24,7 +24,7 @@ log4j.rootLogger=TRACE, RFA
 
 # Appender configuration with variables
 log4j.appender.RFA=org.apache.log4j.RollingFileAppender
-log4j.appender.RFA.File=${somelogfile}
+log4j.appender.RFA.File=${test.directory}/${somelogfile}
 log4j.appender.RFA.MaxFileSize=${maxfilesize}
 log4j.appender.RFA.MaxBackupIndex=${maxbackupindex}
 log4j.appender.RFA.layout=org.apache.log4j.PatternLayout
