--- a/log4j-1.2-api/src/test/resources/config-1.2/log4j-file-recursive.properties
+++ b/log4j-1.2-api/src/test/resources/config-1.2/log4j-file-recursive.properties
@@ -5,7 +5,7 @@
 
 log4j.rootLogger=TRACE, File
 
-test.logFile0=${test.logFile1}/${test.logfile2}
+test.logFile0=${test.logFile1}/${test.logFile2}
 test.logFile1=${test.logFile3}/${test.logFile4}
 test.logFile2=${test.logFile5}/${test.logFile6}
 test.logFile3=path
