Use updated dev info

--- a/pom.xml
+++ b/pom.xml
@@ -99,9 +99,9 @@
       <id>mattsicker</id>
       <name>Matt Sicker</name>
       <email>mattsicker@apache.org</email>
-      <organization>CloudBees</organization>
+      <organization>Apple</organization>
       <roles>
-        <role>PMC Chair</role>
+        <role>PMC Member</role>
       </roles>
       <timezone>America/Chicago</timezone>
     </developer>
