--- a/log4j-to-jul/pom.xml
+++ b/log4j-to-jul/pom.xml
@@ -21,7 +21,6 @@
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>2.17.2-SNAPSHOT</version>
-    <relativePath>../</relativePath>
   </parent>
   <artifactId>log4j-to-jul</artifactId>
   <packaging>jar</packaging>
@@ -81,7 +80,13 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Export-Package>org.apache.logging.tojul</Export-Package>
+            <Export-Package>org.apache.logging.log4j.tojul</Export-Package>
+            <Require-Capability>
+              osgi.extender;filter:="(osgi.extender=osgi.serviceloader.registrar)"
+            </Require-Capability>
+            <Provide-Capability>
+              osgi.serviceloader;osgi.serviceloader=org.apache.logging.log4j.spi.Provider
+            </Provide-Capability>
           </instructions>
         </configuration>
       </plugin>
