--- a/log4j-1.2-api/src/test/resources/log4j1-syslog-protocol-udp.properties
+++ b/log4j-1.2-api/src/test/resources/log4j1-syslog-protocol-udp.properties
@@ -18,8 +18,7 @@
 log4j.rootLogger=DEBUG,syslog
 log4j.appender.syslog=org.apache.log4j.net.SyslogAppender
 log4j.appender.syslog.Threshold=DEBUG
-log4j.appender.syslog.syslogHost=localhost
-log4j.appender.syslog.port=9999
+log4j.appender.syslog.syslogHost=localhost:9999
 log4j.appender.syslog.protocol=UDP
 log4j.appender.syslog.header=true
 log4j.appender.syslog.Facility=LOCAL3
