--- a/pom.xml
+++ b/pom.xml
@@ -1004,6 +1004,7 @@
     </dependencies>
   </dependencyManagement>
   <build>
+    <defaultGoal>clean verify</defaultGoal>
     <pluginManagement>
       <plugins>
         <plugin>
