LOG4J2-3332: replaced MimeMessageParser source with commons-email

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -293,6 +293,13 @@
       <artifactId>commons-io</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Used for testing SmtpAppender -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-email</artifactId>
+      <version>1.5</version>
+      <scope>test</scope>
+    </dependency>
     <!-- Other -->
     <dependency>
       <groupId>commons-codec</groupId>
