--- a/log4j-1.2-api/src/test/resources/config-1.2/log4j-file-SimpleLayout.properties
+++ b/log4j-1.2-api/src/test/resources/config-1.2/log4j-file-SimpleLayout.properties
@@ -28,7 +28,11 @@ log4j.rootLogger=TRACE, File
 #
 
 log4j.appender.File=org.apache.log4j.FileAppender
+log4j.appender.File.Append=false
+log4j.appender.File.BufferedIO=true
+log4j.appender.File.BufferSize=1000
 log4j.appender.File.File=target/mylog.txt
+log4j.appender.File.ImmediateFlush=false
 log4j.appender.File.layout=org.apache.log4j.SimpleLayout
 
 log4j.logger.com.example.foo = DEBUG
