--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,8 +1,24 @@
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements. See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache license, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License. You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the license for the specific language governing permissions and
+# limitations under the license.
+
 name: "CodeQL"
 
 on:
   push:
-    branches: [ release-2.x, master ]
+    branches: [ release-2.x ]
+    # TODO: add master branch if build can be more generic
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ release-2.x ]
@@ -39,21 +55,36 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+    # JDK 11 is needed for the build.
+    # Search `maven-toolchains-plugin` usages for details.
+    - name: Setup JDK 11
+      uses: actions/setup-java@v2.4.0
+      with:
+        distribution: temurin
+        java-version: 11
+        java-package: jdk
+        architecture: x64
+        cache: maven
 
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
+    # JDK 8 is needed for the build, and it is the primary bytecode target.
+    # Hence, JDK 8 is set up after 11, so that JAVA_HOME used by Maven during build will point to 8.
+    - name: Setup JDK 8
+      uses: actions/setup-java@v2.3.0
+      with:
+        distribution: temurin
+        java-version: 8
+        java-package: jdk
+        architecture: x64
+        cache: maven
 
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-    #    and modify them (or add more) to build your code if your project
-    #    uses a compiled language
-
-    #- run: |
-    #   make bootstrap
-    #   make release
+    - name: Build with Maven
+      timeout-minutes: 60
+      shell: bash
+      run: |
+        ./mvnw \
+        --show-version --batch-mode --errors --no-transfer-progress \
+        -DskipTests \
+        --global-toolchains ".github/workflows/maven-toolchains.xml"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
