Use https url for repository

--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -252,7 +252,7 @@
     <repository>
       <id>apache.snapshots</id>
       <name>Apache snapshots repository</name> 
-      <url>http://repository.apache.org/content/groups/snapshots</url> 
+      <url>https://repository.apache.org/content/groups/snapshots</url> 
       <snapshots> 
         <enabled>true</enabled>
       </snapshots> 
