--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup JDK 11
         uses: actions/setup-java@v2.5.0
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
           java-package: jdk
           architecture: x64
