Adds a shorthand method to specify components names
As an extension of #733, this PR allows to specify the name of any
component in its key. Dots in components names are escaped using dashes
`-`. Since this is not the only way to specify a components name, there
is no shorthand for names with dashes.

--- a/log4j-api/src/test/resources/PropertiesUtilTest.properties
+++ b/log4j-api/src/test/resources/PropertiesUtilTest.properties
@@ -18,9 +18,11 @@
 a.1 = 1
 a.2 = 2
 a.3 = 3
+a = empty key
 b.1 = 1
 b.2 = 2
 b.3 = 3
+b = does not start with 'b.'
 c.1.1 = 1
 c.1.2 = 2
 c.1.3 = 3
@@ -28,5 +30,4 @@ dd.1 = 1
 dd.2 = 2
 dd.3 = 3
 
-# Dotless entry, should be ignored
-a = invalid
+e = only empty key
