--- a/log4j-core/src/test/resources/LoggerLevelAppenderTest.properties
+++ b/log4j-core/src/test/resources/LoggerLevelAppenderTest.properties
@@ -17,8 +17,7 @@
 
 status = off
 name = LoggerLevelAppenderTest
-logger.core-config-properties.name = org.apache.logging.log4j.core.config.properties
 # whitespace added for testing trimming
-logger.core-config-properties = INFO , first , second
+logger.org-apache-logging-log4j-core-config-properties = INFO , first , second
 appender.first.type = List
 appender.second.type = List
