--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   ~ See the license for the specific language governing permissions and
   ~ limitations under the license.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j</artifactId>
@@ -83,7 +83,7 @@
       </roles>
       <timezone>Asia/Tokyo</timezone>
       <properties>
-        <picUrl>http://people.apache.org/~rpopma/img/profilepic.jpg</picUrl>
+        <picUrl>https://people.apache.org/~rpopma/img/profilepic.jpg</picUrl>
       </properties>
     </developer>
     <developer>
@@ -165,14 +165,14 @@
       <contributor>
         <name>Michael Vorburger.ch</name>
         <email>vorburger@apache.org</email>
-        <url>http://www.vorburger.ch</url>
+        <url>https://www.vorburger.ch</url>
         <roles>
           <role>https://github.com/apache/logging-log4j2/commits?author=vorburger</role>
           <role>JULer</role>
         </roles>
         <timezone>Europe/Zurich</timezone>
         <properties>
-          <picUrl>http://www.vorburger.ch/michael_vorburger_portrait_in_bay_of_roses_spain_with_bad_lighting.jpg</picUrl>
+          <picUrl>https://www.vorburger.ch/michael_vorburger_portrait_in_bay_of_roses_spain_with_bad_lighting.jpg</picUrl>
         </properties>
       </contributor>
   </contributors>
@@ -184,9 +184,9 @@
       <post>log4j-user@logging.apache.org</post>
       <archive>https://lists.apache.org/list.html?log4j-user@logging.apache.org</archive>
       <otherArchives>
-        <otherArchive>http://mail-archives.apache.org/mod_mbox/logging-log4j-user/</otherArchive>
-        <otherArchive>http://marc.info/?l=log4j-user</otherArchive>
-        <otherArchive>http://dir.gmane.org/gmane.comp.jakarta.log4j.user</otherArchive>
+        <otherArchive>https://mail-archives.apache.org/mod_mbox/logging-log4j-user/</otherArchive>
+        <otherArchive>https://marc.info/?l=log4j-user</otherArchive>
+        <otherArchive>https://dir.gmane.org/gmane.comp.jakarta.log4j.user</otherArchive>
       </otherArchives>
     </mailingList>
     <mailingList>
@@ -196,9 +196,9 @@
       <post>dev@logging.apache.org</post>
       <archive>https://lists.apache.org/list.html?dev@logging.apache.org</archive>
       <otherArchives>
-        <otherArchive>http://mail-archives.apache.org/mod_mbox/logging-dev/</otherArchive>
-        <otherArchive>http://marc.info/?l=dev</otherArchive>
-        <otherArchive>http://dir.gmane.org/gmane.comp.jakarta.log4j.devel</otherArchive>
+        <otherArchive>https://mail-archives.apache.org/mod_mbox/logging-dev/</otherArchive>
+        <otherArchive>https://marc.info/?l=dev</otherArchive>
+        <otherArchive>https://dir.gmane.org/gmane.comp.jakarta.log4j.devel</otherArchive>
       </otherArchives>
     </mailingList>
   </mailingLists>
