--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,15 +20,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup JDK 17
-        uses: actions/setup-java@v2.5.0
-        with:
-          distribution: temurin
-          java-version: 17
-          java-package: jdk
-          architecture: x64
-          cache: 'maven'
-
       - name: Setup JDK 11
         uses: actions/setup-java@v2.5.0
         with:
@@ -57,5 +48,4 @@ jobs:
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
             -DtrimStackTrace=false \
-            -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000 \
-            --global-toolchains .github/workflows/maven-toolchains.xml
+            -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000
