LOG4J2-3341 - Support specifying the level and appender references on the Logger as on property

--- a/log4j-core/src/test/resources/LoggerLevelSysPropsAppenderTest.properties
+++ b/log4j-core/src/test/resources/LoggerLevelSysPropsAppenderTest.properties
@@ -19,8 +19,12 @@ status = off
 name = LoggerLevelAppenderTest
 logger.core-config-properties.name = org.apache.logging.log4j.core.config.properties
 # whitespace added for testing trimming
-logger.core-config-properties = INFO , first , second
+logger.core-config-properties = ${sys:coreProps:-ERROR , first}
+logger.core-config-properties.additivity = false
 appender.first.name = first
 appender.first.type = List
 appender.second.name = second
 appender.second.type = List
+appender.third.name = third
+appender.third.type = List
+rootLogger = INFO, third
