LOG4J2-3341 - Support specifying the level and appender references on the Logger as on property

--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -176,6 +176,11 @@
       <artifactId>junit-jupiter-params</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
     </dependency>
