--- a/log4j-jul/pom.xml
+++ b/log4j-jul/pom.xml
@@ -67,6 +67,10 @@
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter-params</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.junit-pioneer</groupId>
+          <artifactId>junit-pioneer</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -82,6 +86,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <!-- Required for AsyncLogger testing -->
     <dependency>
@@ -122,6 +127,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire.plugin.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.surefire</groupId>
+              <artifactId>surefire-junit47</artifactId>
+              <version>${surefire.plugin.version}</version>
+            </dependency>
+          </dependencies>
           <configuration>
               <systemPropertyVariables>
                   <java.awt.headless>true</java.awt.headless>
