--- a/log4j-java-maven/pom.xml
+++ b/log4j-java-maven/pom.xml
@@ -87,7 +87,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.logging.log4j.async.LoggerMain</mainClass>
+                                    <mainClass>org.apache.logging.log4j.async.LoggerDemo</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
