--- a/log4j-java-maven/pom.xml
+++ b/log4j-java-maven/pom.xml
@@ -28,13 +28,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <log4j.version>2.11.2</log4j.version>
-        <disruptor.version>3.4.2</disruptor.version>
-        <jackson.version>2.9.8</jackson.version>
+        <log4j.version>2.17.1</log4j.version>
+        <disruptor.version>3.4.4</disruptor.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -53,11 +51,6 @@
             <artifactId>disruptor</artifactId>
             <version>${disruptor.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -75,7 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.2.4</version>
                 <executions>
                     <!-- Attach the shade into the package phase -->
                     <execution>
@@ -87,7 +80,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.logging.log4j.async.LoggerHello</mainClass>
+                                    <mainClass>org.apache.logging.log4j.async.Log4J2AsyncLogger</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
