--- a/pom.xml
+++ b/pom.xml
@@ -220,12 +220,12 @@
   <properties>
     <!-- make sure to update these for each release! -->
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.17.1</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.17.2</Log4jReleaseVersion>
     <Log4jReleaseVersionJava7>2.12.4</Log4jReleaseVersionJava7>
     <Log4jReleaseVersionJava6>2.3.2</Log4jReleaseVersionJava6>
-    <Log4jReleaseManager>Matt Sicker</Log4jReleaseManager>
-    <Log4jReleaseKey>D7C92B70FA1C814D</Log4jReleaseKey>
-    <Log4jSigningUserName>mattsicker@apache.org</Log4jSigningUserName>
+    <Log4jReleaseManager>Ralph Goers</Log4jReleaseManager>
+    <Log4jReleaseKey>B3D8E1BA</Log4jReleaseKey>
+    <Log4jSigningUserName>rgoers@apache.org</Log4jSigningUserName>
     <!-- note that any properties you want available in velocity templates must not use periods! -->
     <slf4jVersion>1.7.35</slf4jVersion>
     <logbackVersion>1.2.3</logbackVersion>
