--- a/pom.xml
+++ b/pom.xml
@@ -262,10 +262,10 @@
     <release.plugin.version>2.5.3</release.plugin.version>
     <scm.plugin.version>1.9.5</scm.plugin.version>
     <jxr.plugin.version>3.1.1</jxr.plugin.version>
-    <revapi.plugin.version>0.11.1</revapi.plugin.version>
+    <revapi.plugin.version>0.14.6</revapi.plugin.version>
     <revapi.skip>false</revapi.skip>
     <clirr.plugin.version>2.8</clirr.plugin.version>
-    <site.plugin.version>3.11.0</site.plugin.version>
+    <site.plugin.version>3.8.2</site.plugin.version>
     <!-- Maven site depends on Velocity and the escaping rules are different in newer versions. -->
     <!-- See https://maven.apache.org/plugins/maven-site-plugin/migrate.html -->
     <velocity.plugin.version>1.5</velocity.plugin.version>
@@ -1847,7 +1847,7 @@
               <dependency>
                 <groupId>org.revapi</groupId>
                 <artifactId>revapi-java</artifactId>
-                <version>0.18.2</version>
+                <version>0.26.1</version>
               </dependency>
             </dependencies>
             <executions>
@@ -1927,6 +1927,9 @@
             <groupId>org.revapi</groupId>
             <artifactId>revapi-maven-plugin</artifactId>
             <version>${revapi.plugin.version}</version>
+            <configuration>
+              <skip>${revapi.skip}</skip>
+            </configuration>
             <reportSets>
               <reportSet>
                 <inherited>false</inherited>
