--- a/log4j-to-jul/pom.xml
+++ b/log4j-to-jul/pom.xml
@@ -33,6 +33,7 @@
     <projectDir>/log4j-to-jul</projectDir>
     <module.name>org.apache.logging.tojul</module.name>
     <maven.doap.skip>true</maven.doap.skip>
+    <revapi.skip>true</revapi.skip>
   </properties>
   <dependencies>
     <dependency>
