--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -26,7 +26,7 @@
   <description>Apache Log4j Bill of Materials</description>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-bom</artifactId>
-  <version>2.17.2</version>
+  <version>2.17.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <dependencyManagement>
     <dependencies>
@@ -215,8 +215,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <scm>
-    <tag>log4j-2.17.2-rc1</tag>
-  </scm>
 </project>
