--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -21,7 +21,7 @@
   <groupId>org.apache.logging.log4j.samples</groupId>
   <artifactId>log4j-spring-cloud-config-sample-server</artifactId>
   <packaging>jar</packaging>
-  <version>2.17.2</version>
+  <version>2.17.3-SNAPSHOT</version>
 
   <name>Apache Log4j Sample Configuration Service</name>
   <description>Sample Cloud Config Server</description>
@@ -303,8 +303,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>log4j-2.17.2-rc1</tag>
-  </scm>
 </project>
