[LOG4J2-3427] Add a ServiceLoader tool
This adds a `ServiceLoader` which:

 * automatically discards service classes, which can not be instantiated
(e.g. classes in the server's classloader of a servlet container), from
the list of returned services,
 * implements a common mechanism to override the service found by
`ServiceLoader`,
 * adds warnings if we only need one service, but multiple candidates
are found.

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -91,6 +91,10 @@
       <artifactId>jackson-databind</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
