--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -68,6 +68,10 @@
       <artifactId>commons-lang3</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.hk2</groupId>
+      <artifactId>osgi-resource-locator</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
