[LOG4J2-3366] Fixes order of property sources
Fixes the order of property sources to work as documented and changes
the priorities of the sources: more specific sources (e.g. Spring
Environment) should have priority over global settings such as
environment variables.

Conflicts:
	log4j-api/src/main/java/org/apache/logging/log4j/util/PropertiesUtil.java
	src/site/xdoc/manual/configuration.xml.vm

--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -97,6 +97,10 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+    <dependency>
+          <groupId>uk.org.webcompere</groupId>
+      <artifactId>system-stubs-jupiter</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
